editor/zed/tree-sitter-zscript/test/corpus/basics.txt
================================================================================
Simple integer
================================================================================

42

--------------------------------------------------------------------------------

(source_file
  (number))

================================================================================
Negative integer
================================================================================

-5

--------------------------------------------------------------------------------

(source_file
  (number))

================================================================================
Float literal
================================================================================

3.14

--------------------------------------------------------------------------------

(source_file
  (float))

================================================================================
Float with suffix
================================================================================

2.5f

--------------------------------------------------------------------------------

(source_file
  (float))

================================================================================
String literal
================================================================================

"hello world"

--------------------------------------------------------------------------------

(source_file
  (string))

================================================================================
String with escapes
================================================================================

"hello\nworld\t\"quoted\""

--------------------------------------------------------------------------------

(source_file
  (string
    (escape_sequence)
    (escape_sequence)
    (escape_sequence)
    (escape_sequence)))

================================================================================
Boolean literals
================================================================================

true false #t #f

--------------------------------------------------------------------------------

(source_file
  (boolean)
  (boolean)
  (boolean)
  (boolean))

================================================================================
Comment
================================================================================

; this is a comment
42

--------------------------------------------------------------------------------

(source_file
  (comment)
  (number))

================================================================================
Simple symbol
================================================================================

foo

--------------------------------------------------------------------------------

(source_file
  (symbol))

================================================================================
Simple S-expression
================================================================================

(+ 1 2)

--------------------------------------------------------------------------------

(source_file
  (list
    head: (symbol)
    (number)
    (number)))

================================================================================
Nested S-expression
================================================================================

(define x (+ 1 2))

--------------------------------------------------------------------------------

(source_file
  (list
    head: (symbol)
    (symbol)
    (list
      head: (symbol)
      (number)
      (number))))

================================================================================
Function definition
================================================================================

(define (add x y)
  (+ x y))

--------------------------------------------------------------------------------

(source_file
  (list
    head: (symbol)
    (list
      head: (symbol)
      (symbol)
      (symbol))
    (list
      head: (symbol)
      (symbol)
      (symbol))))

================================================================================
Bracket list
================================================================================

[x : Int]

--------------------------------------------------------------------------------

(source_file
  (bracket_list
    (symbol)
    (colon)
    (symbol)))

================================================================================
Type variable
================================================================================

^a

--------------------------------------------------------------------------------

(source_file
  (type_variable))

================================================================================
Wildcard
================================================================================

_

--------------------------------------------------------------------------------

(source_file
  (wildcard))

================================================================================
Ellipsis
================================================================================

...

--------------------------------------------------------------------------------

(source_file
  (ellipsis))

================================================================================
CLR qualifier
================================================================================

:instance

--------------------------------------------------------------------------------

(source_file
  (clr_qualifier))

================================================================================
Quote
================================================================================

'foo

--------------------------------------------------------------------------------

(source_file
  (quote
    (symbol)))

================================================================================
Lambda expression
================================================================================

(fn (x) (+ x 1))

--------------------------------------------------------------------------------

(source_file
  (list
    head: (symbol)
    (list
      head: (symbol))
    (list
      head: (symbol)
      (symbol)
      (number))))

================================================================================
Let binding
================================================================================

(let ((x 1) (y 2)) (+ x y))

--------------------------------------------------------------------------------

(source_file
  (list
    head: (symbol)
    (list
      head: (list
        head: (symbol)
        (number))
      (list
        head: (symbol)
        (number)))
    (list
      head: (symbol)
      (symbol)
      (symbol))))

================================================================================
Match expression
================================================================================

(match x
  (Some v) v
  None 0)

--------------------------------------------------------------------------------

(source_file
  (list
    head: (symbol)
    (symbol)
    (list
      head: (symbol)
      (symbol))
    (symbol)
    (symbol)
    (number)))

================================================================================
Pipe operator
================================================================================

(|> x (map f) (filter g))

--------------------------------------------------------------------------------

(source_file
  (list
    head: (symbol)
    (symbol)
    (list
      head: (symbol)
      (symbol))
    (list
      head: (symbol)
      (symbol))))

================================================================================
Record definition
================================================================================

(record Point [x : Int] [y : Int])

--------------------------------------------------------------------------------

(source_file
  (list
    head: (symbol)
    (symbol)
    (bracket_list
      (symbol)
      (colon)
      (symbol))
    (bracket_list
      (symbol)
      (colon)
      (symbol))))

================================================================================
Import statement
================================================================================

(import "core")

--------------------------------------------------------------------------------

(source_file
  (list
    head: (symbol)
    (string)))

================================================================================
Namespace declaration
================================================================================

(namespace MyApp.Core)

--------------------------------------------------------------------------------

(source_file
  (list
    head: (symbol)
    (symbol)))

================================================================================
Empty list
================================================================================

()

--------------------------------------------------------------------------------

(source_file
  (list))
